fix spacing around Forgot Password link

--- a/web-app/css/login.css
+++ b/web-app/css/login.css
@@ -305,10 +305,10 @@ LOG IN
   /* bottom section */
   top: 244px;
   bottom: 0;
-  left:0;
-  right:0;
-  margin: 0;
-  padding: 24px 35px 0 85px;
+  left: 0;
+  right: 0;
+  margin: 24px 0 0 0;
+  padding: 0 35px 0 85px;
 }
 
 .splashBg .appName {
